test/fails/bad_parsing/tag_out_of_order1.lgl
void main() {
    return;
}

tag s is vec2;